# crufty

./: Cargo.toml  LICENSE  README.md
src/: README.md  crufty.rs  main.rs
src/crufty/: artifact_type.rs  cleaner.rs  cli.rs  estimator.rs  fetcher.rs  types.rs  ui.rs
