[package]
name = "crufty"
version = "0.2.0-rc1"
edition = "2024"
license = "MIT"
description = "A command-line tool that scans projects for large build artifacts and cleans them up safely"
homepage = "https://github.com/EncodePanda/crufty"
repository = "https://github.com/EncodePanda/crufty"
readme = "README.md"
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
globset = "0.4"
indicatif = "0.17.11"
walkdir = "2.4"

[dev-dependencies]
assert_fs = "1"
